# ml-lessons-course

./: LICENSE  README  README.md  pyproject.toml
intro_to_machine_learning/bag/: __init__.py  auto_mpg.py  dogs_vs_cats.py  fashin_mnist.py  flowers.py
intro_to_machine_learning/bag/lowlevels/: __init__.py  debug_cnn.py  loss_functions.py  optmizer_functions.py
intro_to_machine_learning/extras/: regression_predict_fuel.py  tensors.py  training_loop.py
intro_to_machine_learning/lesson1/: celsious_to_fahrenheit.py
intro_to_machine_learning/lesson3/: fashion_mnist_ml.py
intro_to_machine_learning/lesson5/: dogs_vs_cats_cnn.py  flowers_cnn.py
intro_to_machine_learning/lesson6/: dogs_vs_cats_cnn_hub.py
ml_lessons_course/intro_to_machine_learning/bag/: dogs_vs_cats.py  fashin_mnist.py  flowers.py  line_gaussian_noise.py
ml_lessons_course/intro_to_machine_learning/bag/lowlevels/: simple_linear_regression.py
ml_lessons_course/intro_to_machine_learning/extras/: graphs_function.py
ml_lessons_course/intro_to_machine_learning/lesson3/: fashion_mnist_ml.py
ml_lessons_course/intro_to_machine_learning/lesson4/: fashion_mnist_conv.py
ml_lessons_course/intro_to_machine_learning/lesson5/: flowers_cnn.py
ml_lessons_course/intro_to_machine_learning/lesson6/: dogs_vs_cats_cnn_hub.py
ml_lessons_course/intro_to_machine_learning/lesson7/: loading_model.py  saving_loading_model.py  saving_model.py
ml_lessons_course/intro_to_pytorch/potatos-deases-classification/: pyproject.toml
ml_lessons_course/intro_to_pytorch/potatos-deases-classification/src/potatos_deases_classification/: __init__.py  dataset.py
(+2 files in other folders)
