[tool.poetry]
name = "ml-lessons-course"
version = "0.1.0"
description = "Collection of note taken during ml couses"
authors = ["dmike16 <cipmiky@gmail.com>"]
license = "MIT"
packages = [
    { include="bag", from = "./ml_lessons_course/intro_to_machine_learning" },
]

[tool.poetry.dependencies]
python = ">=3.9,<3.11"
tensorflow = "^2.8.0"
tensorflow-datasets = "^4.5.2"
matplotlib = "^3.5.1"
pandas = "^1.4.2"
tensorflow-hub = "^0.12.0"
PyQt5 = "^5.15.6"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
