[project]
name = "potatos-deases-classification"
version = "0.1.0"
description = ""
authors = [
    {name = "dmike16",email = "cipmiky@gmail.com"}
]
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "torch (>=2.7.1,<3.0.0)",
    "torchvision (>=0.22.1,<0.23.0)",
    "torchaudio (>=2.7.1,<3.0.0)",
]

[tool.poetry]
packages = [{include = "potatos_deases_classification", from = "src"}]


[[tool.poetry.source]]
name = "pytorch-cpu-src"
url = "https://download.pytorch.org/whl/cpu"
priority = "explicit"


[tool.poetry.dependencies]
torch = {source = "pytorch-cpu-src"}
torchvision = {source = "pytorch-cpu-src"}
torchaudio = {source = "pytorch-cpu-src"}

[tool.poetry.group.dev.dependencies]
jupyter = "^1.1.1"
split-folders = "^0.5.1"

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
